src/proto/auth/auth.pb-c.h

/* Generated by the protocol buffer compiler.  DO NOT EDIT! */
/* Generated from: auth/auth.proto */

#ifndef PROTOBUF_C_auth_2fauth_2eproto__INCLUDED
#define PROTOBUF_C_auth_2fauth_2eproto__INCLUDED

#include <protobuf-c/protobuf-c.h>

PROTOBUF_C__BEGIN_DECLS

#if PROTOBUF_C_VERSION_NUMBER < 1003000
# error This file was generated by a newer version of protobuf-c which is incompatible with your libprotobuf-c headers. Please update your headers.
#elif 1005001 < PROTOBUF_C_MIN_COMPILER_VERSION
# error This file was generated by an older version of protobuf-c which is incompatible with your libprotobuf-c headers. Please regenerate this file with a newer version of protobuf-c.
#endif


typedef struct Auth__RegisterRequest Auth__RegisterRequest;
typedef struct Auth__RegisterResponse Auth__RegisterResponse;
typedef struct Auth__LoginRequest Auth__LoginRequest;
typedef struct Auth__LoginResponse Auth__LoginResponse;


/* --- enums --- */


/* --- messages --- */

struct  Auth__RegisterRequest
{
  ProtobufCMessage base;
  char *username;
  char *password;
  char *security_key;
};
#define AUTH__REGISTER_REQUEST__INIT \
 { PROTOBUF_C_MESSAGE_INIT (&auth__register_request__descriptor) \
    , (char *)protobuf_c_empty_string, (char *)protobuf_c_empty_string, (char *)protobuf_c_empty_string }


struct  Auth__RegisterResponse
{
  ProtobufCMessage base;
  char *token;
};
#define AUTH__REGISTER_RESPONSE__INIT \
 { PROTOBUF_C_MESSAGE_INIT (&auth__register_response__descriptor) \
    , (char *)protobuf_c_empty_string }


struct  Auth__LoginRequest
{
  ProtobufCMessage base;
  char *username;
  char *password;
};
#define AUTH__LOGIN_REQUEST__INIT \
 { PROTOBUF_C_MESSAGE_INIT (&auth__login_request__descriptor) \
    , (char *)protobuf_c_empty_string, (char *)protobuf_c_empty_string }


struct  Auth__LoginResponse
{
  ProtobufCMessage base;
  char *token;
};
#define AUTH__LOGIN_RESPONSE__INIT \
 { PROTOBUF_C_MESSAGE_INIT (&auth__login_response__descriptor) \
    , (char *)protobuf_c_empty_string }


/* Auth__RegisterRequest methods */
void   auth__register_request__init
                     (Auth__RegisterRequest         *message);
size_t auth__register_request__get_packed_size
                     (const Auth__RegisterRequest   *message);
size_t auth__register_request__pack
                     (const Auth__RegisterRequest   *message,
                      uint8_t             *out);
size_t auth__register_request__pack_to_buffer
                     (const Auth__RegisterRequest   *message,
                      ProtobufCBuffer     *buffer);
Auth__RegisterRequest *
       auth__register_request__unpack
                     (ProtobufCAllocator  *allocator,
                      size_t               len,
                      const uint8_t       *data);
void   auth__register_request__free_unpacked
                     (Auth__RegisterRequest *message,
                      ProtobufCAllocator *allocator);
/* Auth__RegisterResponse methods */
void   auth__register_response__init
                     (Auth__RegisterResponse         *message);
size_t auth__register_response__get_packed_size
                     (const Auth__RegisterResponse   *message);
size_t auth__register_response__pack
                     (const Auth__RegisterResponse   *message,
                      uint8_t             *out);
size_t auth__register_response__pack_to_buffer
                     (const Auth__RegisterResponse   *message,
                      ProtobufCBuffer     *buffer);
Auth__RegisterResponse *
       auth__register_response__unpack
                     (ProtobufCAllocator  *allocator,
                      size_t               len,
                      const uint8_t       *data);
void   auth__register_response__free_unpacked
                     (Auth__RegisterResponse *message,
                      ProtobufCAllocator *allocator);
/* Auth__LoginRequest methods */
void   auth__login_request__init
                     (Auth__LoginRequest         *message);
size_t auth__login_request__get_packed_size
                     (const Auth__LoginRequest   *message);
size_t auth__login_request__pack
                     (const Auth__LoginRequest   *message,
                      uint8_t             *out);
size_t auth__login_request__pack_to_buffer
                     (const Auth__LoginRequest   *message,
                      ProtobufCBuffer     *buffer);
Auth__LoginRequest *
       auth__login_request__unpack
                     (ProtobufCAllocator  *allocator,
                      size_t               len,
                      const uint8_t       *data);
void   auth__login_request__free_unpacked
                     (Auth__LoginRequest *message,
                      ProtobufCAllocator *allocator);
/* Auth__LoginResponse methods */
void   auth__login_response__init
                     (Auth__LoginResponse         *message);
size_t auth__login_response__get_packed_size
                     (const Auth__LoginResponse   *message);
size_t auth__login_response__pack
                     (const Auth__LoginResponse   *message,
                      uint8_t             *out);
size_t auth__login_response__pack_to_buffer
                     (const Auth__LoginResponse   *message,
                      ProtobufCBuffer     *buffer);
Auth__LoginResponse *
       auth__login_response__unpack
                     (ProtobufCAllocator  *allocator,
                      size_t               len,
                      const uint8_t       *data);
void   auth__login_response__free_unpacked
                     (Auth__LoginResponse *message,
                      ProtobufCAllocator *allocator);
/* --- per-message closures --- */

typedef void (*Auth__RegisterRequest_Closure)
                 (const Auth__RegisterRequest *message,
                  void *closure_data);
typedef void (*Auth__RegisterResponse_Closure)
                 (const Auth__RegisterResponse *message,
                  void *closure_data);
typedef void (*Auth__LoginRequest_Closure)
                 (const Auth__LoginRequest *message,
                  void *closure_data);
typedef void (*Auth__LoginResponse_Closure)
                 (const Auth__LoginResponse *message,
                  void *closure_data);

/* --- services --- */

typedef struct Auth__AuthService_Service Auth__AuthService_Service;
struct Auth__AuthService_Service
{
  ProtobufCService base;
  void (*register)(Auth__AuthService_Service *service,
                   const Auth__RegisterRequest *input,
                   Auth__RegisterResponse_Closure closure,
                   void *closure_data);
  void (*login)(Auth__AuthService_Service *service,
                const Auth__LoginRequest *input,
                Auth__LoginResponse_Closure closure,
                void *closure_data);
};
typedef void (*Auth__AuthService_ServiceDestroy)(Auth__AuthService_Service *);
void auth__auth_service__init (Auth__AuthService_Service *service,
                               Auth__AuthService_ServiceDestroy destroy);
#define AUTH__AUTH_SERVICE__BASE_INIT \
    { &auth__auth_service__descriptor, protobuf_c_service_invoke_internal, NULL }
#define AUTH__AUTH_SERVICE__INIT(function_prefix__) \
    { AUTH__AUTH_SERVICE__BASE_INIT,\
      function_prefix__ ## register,\
      function_prefix__ ## login  }
void auth__auth_service__register(ProtobufCService *service,
                                  const Auth__RegisterRequest *input,
                                  Auth__RegisterResponse_Closure closure,
                                  void *closure_data);
void auth__auth_service__login(ProtobufCService *service,
                               const Auth__LoginRequest *input,
                               Auth__LoginResponse_Closure closure,
                               void *closure_data);

/* --- descriptors --- */

extern const ProtobufCMessageDescriptor auth__register_request__descriptor;
extern const ProtobufCMessageDescriptor auth__register_response__descriptor;
extern const ProtobufCMessageDescriptor auth__login_request__descriptor;
extern const ProtobufCMessageDescriptor auth__login_response__descriptor;
extern const ProtobufCServiceDescriptor auth__auth_service__descriptor;

PROTOBUF_C__END_DECLS


#endif  /* PROTOBUF_C_auth_2fauth_2eproto__INCLUDED */